# lexverify-crag

./: .env.example  DEMO.md  README.md  pyproject.toml
data/eval_results/: eval_results.json
data/gold_standard/: fl_personal_injury_qa.json
data/processed/: fl_legal_corpus.json  legal_graph_data.json
evals/: run_evals.py
prompts/: evaluator_v1.yaml  generator_v1.yaml  jurisdictional_rules.json
scripts/: evaluate.py  ingest_data.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  grader.py  web_search.py
src/core/: __init__.py  distilled_critic.py  evaluator.py  generator.py  knowledge_graph.py  multi_step.py  retriever.py  router.py
src/utils/: __init__.py  embeddings.py  legal_cleaning.py  logger.py
tests/: conftest.py  test_critic_scoring.py  test_distilled_critic.py  test_knowledge_graph.py  test_multi_step.py  test_retrieval.py
