[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexverify-crag"
version = "0.1.0"
description = "Corrective RAG (CRAG) framework for legal citation integrity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jorge Martinez"},
]
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-pinecone>=0.2.0",
    "langchain-community>=0.3.0",
    "tavily-python>=0.5.0",
    "ragas>=0.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.12.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pinecone>=5.0",
    "structlog>=24.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
fast-critic = [
    "langchain-ollama>=0.2.0",
]

[project.scripts]
lexverify = "src.main:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
